--- a/p3.html
+++ b/p3.html
@@ -1,74 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-commerce Product Page</title>
-  <link rel="stylesheet" href="style.css">
+    <style>
+        .product-card {
+            width: 300px;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            margin: auto;
+            text-align: center;
+        }
+        .product-card img {
+            width: 100%;
+            height: auto;
+        }
+        .product-card button {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 24px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <h1>Product Name</h1>
-  </header>
-  <main>
-    <div class="product-image">
-      <img src="product.jpg" alt="Product Image">
+    <div class="product-card">
+        <img src="product-image.jpg" alt="Product Image">
+        <h2>Product Name</h2>
+        <p>$99.99</p>
+        <button type="button">Add to Cart</button>
     </div>
-    <div class="product-info">
-      <p>Product Description</p>
-      <p>Price: $129.99</p>
-      <button>Add to Cart</button>
-    </div>
-  </main>
-  <footer>
-    <p>Copyright &copy; 2023 Your Company Name</p>
-  </footer>
-  <style>
-  body {
-    font-family: sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  header {
-    background-color: #f0f0f0;
-    padding: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  .product-image {
-    float: left;
-    width: 250px;
-    margin-right: 20px;
-  }
-  
-  .product-info {
-    float: left;
-    width: calc(100% - 270px);
-  }
-  
-  p {
-    margin-bottom: 10px;
-  }
-  
-  button {
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  footer {
-    background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
-  }
-</style>
-  
 </body>
 </html>
+ 
+    
